test/should-fail/初始化数组.j
globals
    integer array a = 1
endglobals